apps/example/httpbinsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: default
spec:
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
