apps/example/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: httpbin.aakshranjan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
